[project]
name = "wanderlisted"
version = "0.2.0"
description = "Multi-agent AI travel itinerary planner"
requires-python = ">=3.12"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that call live external APIs (deselect with -m 'not integration')",
]
filterwarnings = [
    "ignore::UserWarning",
    "ignore:'asyncio.iscoroutinefunction' is deprecated:DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/api/*",
    "src/mcp_server.py",           # MCP stdio server — tested via integration
    "src/agent/agent.py",          # Stage 1 entrypoint — imports LLM at module level
    "src/agent/graph.py",          # LangGraph Studio entrypoint — imports LLM at module level
    "src/agent/llm.py",            # LLM factory — config glue, each branch needs real provider SDK
    "src/agent/renderer.py",       # HTML rendering — no business logic
    "src/evaluation/golden_dataset.py",  # Pure data, no logic
]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 80

[tool.ruff.lint]
ignore = ["E501"]                 # Line length handled by formatter, not linter

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]        # Re-exports in package __init__ files
"scripts/*" = ["E402"]          # Scripts use sys.path / load_dotenv before imports
